--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 		textarea.code { font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", monospace; height: 160px; }
 		hr { border:0; border-top:1px solid #223048; margin:8px 0; }
 		.colorChip { width:14px; height:14px; border-radius:999px; display:inline-block; vertical-align:middle; border:1px solid #0007; }
+		.eye-toggle { width: 20px; height: 20px; padding: 2px; border: 1px solid #243041; background: #0b1220; border-radius: 4px; cursor: pointer; display: inline-flex; align-items: center; justify-content: center; }
+		.eye-toggle:hover { background: #1e293b; }
+		.eye-toggle svg { width: 14px; height: 14px; fill: var(--muted); }
 	</style>
 </head>
 <body>
@@ -72,7 +75,7 @@
 
 		<div class="panel group">
 			<legend>Tile arrangement</legend>
-			<input id="arrangementStr" class="code" placeholder="e.g., 6 3 1 5 4 2" value="-4 -2 -5 1 -3 6">
+			<input id="arrangementStr" type="text" placeholder="e.g., 6 3 1 5 4 2" value="-4 -2 -5 1 -3 6">
 			<div class="row">
 				<button id="applyArrangement" class="inline">Apply</button>
 				<button id="toggleTileLabels" class="inline">Toggle tile numbers</button>
@@ -1311,9 +1314,13 @@ function rebuildAssignmentsUI(){
 	}
 	
 	PLAYER_ASSIGNMENTS.forEach((a,idx)=>{
-		const row=document.createElement('div'); row.className='row'; row.style.marginBottom='8px';
+		const row=document.createElement('div'); row.className='row'; 
+		// Add spacing between player rows, except for the last one
+		if (idx < PLAYER_ASSIGNMENTS.length - 1) {
+			row.style.marginBottom='24px';
+		}
 		const label=document.createElement('label'); label.textContent=`Player ${idx+1}`; label.style.minWidth='70px';
-		const chip=document.createElement('span'); chip.className='colorChip'; chip.style.background=PLAYER_COLORS[a.color]; chip.style.marginRight='6px';
+		const chip=document.createElement('span'); chip.className='colorChip'; chip.style.background=PLAYER_COLORS[a.color]; chip.style.margin='0 6px';
 		
 		const colorSel=document.createElement('select');
 		PLAYER_COLOR_ORDER.forEach(c=>{ const opt=document.createElement('option'); opt.value=c; opt.textContent=c; opt.selected=(a.color===c); colorSel.appendChild(opt); });
@@ -1418,26 +1425,34 @@ function rebuildAssignmentsUI(){
 		// Initial rule display
 		updateRuleDisplay(a, ruleDisplay, cellCount);
 		
-		// Add show outline checkbox
-		const showOutlineCheckbox = document.createElement('input');
-		showOutlineCheckbox.type = 'checkbox';
-		showOutlineCheckbox.id = `showPlayer${idx}`;
-		showOutlineCheckbox.style.marginLeft = '6px';
-		showOutlineCheckbox.addEventListener('change', () => {
+		// Add show/hide eye toggle
+		const eyeToggle = document.createElement('button');
+		eyeToggle.type = 'button';
+		eyeToggle.className = 'eye-toggle';
+		eyeToggle.id = `showPlayer${idx}`;
+		
+		// Start with "hidden" state (eye closed) - use data attribute for compatibility
+		eyeToggle.dataset.visible = 'false';
+		
+		function updateEyeIcon() {
+			const isVisible = eyeToggle.dataset.visible === 'true';
+			eyeToggle.innerHTML = isVisible 
+				? `<svg viewBox="0 0 24 24"><path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"/></svg>`
+				: `<svg viewBox="0 0 24 24"><path d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78l3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"/></svg>`;
+		}
+		
+		updateEyeIcon();
+		
+		eyeToggle.addEventListener('click', () => {
+			const currentVisible = eyeToggle.dataset.visible === 'true';
+			eyeToggle.dataset.visible = (!currentVisible).toString();
+			updateEyeIcon();
 			autoEvaluateAndRedraw();
 		});
 		
-		const showOutlineLabel = document.createElement('label');
-		showOutlineLabel.htmlFor = `showPlayer${idx}`;
-		showOutlineLabel.textContent = 'Show';
-		showOutlineLabel.style.fontSize = '12px';
-		showOutlineLabel.style.color = 'var(--muted)';
-		showOutlineLabel.style.marginLeft = '4px';
-		
-		row.appendChild(label); 
+		row.appendChild(eyeToggle);
 		row.appendChild(chip);
-		row.appendChild(showOutlineCheckbox);
-		row.appendChild(showOutlineLabel);
+		row.appendChild(label); 
 		row.appendChild(colorSel); 
 		row.appendChild(clueInput);
 		row.appendChild(ruleDisplay);
@@ -1523,10 +1538,10 @@ function autoEvaluateAndRedraw(){
 	const per = act.map((r,i)=>[r, evalRule(r), activeAssignments[i]]);
 	per.forEach(([r,s])=>{ const el=document.getElementById(`rc_${r.id}`); if(el) el.textContent=`${s.size}`; });
 	
-	// Only show overlays for players whose checkboxes are checked
+	// Only show overlays for players whose eye toggles are visible
 	const overlays = per.filter(([r,s,assignment]) => {
-		const checkbox = document.getElementById(`showPlayer${assignment.originalIndex}`);
-		return checkbox && checkbox.checked;
+		const eyeToggle = document.getElementById(`showPlayer${assignment.originalIndex}`);
+		return eyeToggle && eyeToggle.dataset.visible === 'true';
 	}).map(([r,s,assignment])=>({id:r.id,set:s,color: PLAYER_COLORS[assignment.color] }));
 	
 	// Always calculate habitat intersection regardless of checkboxes
