Fix margins of left pane

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		#right { grid-area: right; display: grid; gap: 8px; align-content: start; }
 		#canvasWrap { grid-area: canvas; position: relative; background: #0b1220; border-radius: 12px; overflow: hidden; }
 		label { font-size: 12px; color: var(--muted); }
-		select, button, input[type="number"], textarea, input[type="text"] { width: 100%; background: #0b1220; color: var(--text); border: 1px solid #243041; border-radius: 8px; padding: 8px; font: inherit; }
+		select, button, input[type="number"], textarea, input[type="text"] { width: 100%; box-sizing: border-box; background: #0b1220; color: var(--text); border: 1px solid #243041; border-radius: 8px; padding: 8px; font: inherit; }
 		button { cursor: pointer; }
 		button.inline { width: auto; padding: 6px 10px; border-radius: 8px; }
 		.group { display: grid; gap: 6px; }
