--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>Cryptid Board Analyzer (Lightweight)</title>
+	<title>Cryptid Explorer</title>
 	<style>
 		:root { --pad: 10px; --bg: #0f172a; --panel: #111827; --muted: #94a3b8; --text: #e5e7eb; }
 		html, body { height: 100%; overflow: hidden; }
